--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 # serverless.yml
 
 # Service name
-service: myservice
+service: ss
 
 # Framework version constraint (semver constraint): '3', '^2.33'
 frameworkVersion: '3'
